[package]
name = "my_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }